--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.port=8080
-management.server.port=8090
+management.security.role=admin
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
