--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-management.security.role=admin
-management.endpoints.web.exposure.include=*
-management.endpoint.shutdown.enabled=true
+info.name=SafetyNet
+info.version=1.0
+info.description=App to manage safety
+
+management.endpoints.web.exposure.include=info,health,beans,env,metrics,httptrace
