--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,8 @@
 info.name=SafetyNet
 info.version=1.0
 info.description=App to manage safety
+info.profile=Test
 
 management.endpoints.web.exposure.include=info,health,beans,env,metrics,httptrace
 
-filePathInputData = ./data.json
+filePathInputData = ./data-test.json
