--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ info.name=SafetyNet
 info.version=1.0
 info.description=App to manage safety
 
-management.endpoints.web.exposure.include=info,health,beans,env,metrics,httptrace
+management.endpoints.web.exposure.include=health,info,metrics,httptrace
 
 filePathInputData = ./data.json
