Update of README.md file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 info.name=SafetyNet
 info.version=1.0
-info.description=App to manage safety
+info.description=Web application that sends information in order to help rescue teams in case of emergency
 
 management.endpoints.web.exposure.include=health,info,metrics,httptrace
 
